# PH30056-Labs

./: .gitignore  readme.md
Coursework 1/: Template.docx  readme.md
Coursework 1/Code/: DLASystem.cpp  DLASystem.h  Data.py  Window.cpp  boxcount.py  main.cpp  randomGenerator.h  rnd.h  visualisation.py
Coursework 1/DLA/: CMakeLists.txt  main.cpp  readme.md
Coursework 1/DLA-3D/: boxcount.py  main.cpp  readme.md
Coursework 1/DLA-Single/: CMakeLists.txt  Makefile  main.cpp  readme.md
Coursework 1/Data/: Data.ipynb  DensityAnalysis.ipynb  FractalDimensionAnalysis.ipynb  StickingProbabilityAnalysis.ipynb  boxcount.py  density.py  extra.ipynb  readme.md
Coursework 1/Data/PH30056/: dla.csv
Coursework 1/PH30056/: DLASystem.cpp  Data.ipynb  Particle.h  Window.h  data  main.cpp  readme.md  visualisation.pvsm
Coursework 1/Report/: references.bib  sticking_probabilities.tgn
Coursework 1/Report/LaTeX/: main.old.tex  main.tex  references.bib
Coursework 2/: IsingModel.ipynb
Coursework 2/.ipynb_checkpoints/: IsingModel-checkpoint.ipynb
Coursework 2/Code/: IsingSystem.cpp  IsingSystem.h  MAIN_Source.cpp  Makefile  Window.cpp  Window.h  input.txt  main.cpp  readme.txt  rnd.h  test.py
Coursework 2/Data/1/: Analysis.ipynb
Coursework 2/Data/2/: 2.ipynb  Variances.ipynb  (+1 more)
Coursework 2/Report/: References.bib
Exercise1/: Makefile  Makefile.old  glSimple.cpp  hello1.cpp  hello2.cpp  planetClass.cpp  planetClass2.cpp  planetClass3.cpp  planetStruct.cpp  run
Exercise2/: Particle.cpp  Particle.h  Window.cpp  Window.h  glMulti.cpp  rnd.h  systemClass.cpp  systemClass.h
(+2 files in other folders)
